--- a/src/index.html
+++ b/src/index.html
@@ -3,4 +3,21 @@
 
 {% block content %}
 
+<section class="hero">
+  <div class="container">
+    <h1 class="hero-title">Пиломатериалы напрямую от производителя</h1>
+    <div class="btn-wrap"><a href="#" class="btn btn-green btn-hero"><p>Смотреть каталог</p></a></div>
+    <div class="hero-consult">
+      <h3 class="title-md">Оставьте заявку и наши консультанты помогут вам определиться с выбором</h3>
+      <form action="#" class="hero-consult__form">
+        <label class="hero-consult__file"><input type="file"/></label>
+        <input type="email" class="hero-consult__input" placeholder="e-mail" />
+        <p class="hero-consult__or">либо</p>
+        <input type="tel" class="hero-consult__input masked" placeholder="+7 (___) ___-__-__" />
+        <button class="btn btn-green btn-consult"><p>Получить расчет</p></button>
+      </form>
+    </div>
+  </div>
+</section>
+
 {% endblock %}
