--- a/src/index.html
+++ b/src/index.html
@@ -21,4 +21,10 @@
   </div>
 </section>
 
+<section class="promo">
+  <div class="container">
+    {% include 'components/promo-slider.html' %}
+  </div>
+</section>
+
 {% endblock %}
