--- a/src/index.html
+++ b/src/index.html
@@ -27,4 +27,18 @@
   </div>
 </section>
 
+<section class="product">
+  <div class="container">
+    <h2 class="title-lg">Наша продукция:</h2>
+    <div class="product-row">
+      {% include 'components/product-item.html' %}
+      {% include 'components/product-item.html' %}
+      {% include 'components/product-item.html' %}
+      {% include 'components/product-item.html' %}
+      {% include 'components/product-item.html' %}
+      {% include 'components/product-item.html' %}
+    </div>
+  </div>
+</section>
+
 {% endblock %}
