--- a/src/index.html
+++ b/src/index.html
@@ -41,4 +41,40 @@
   </div>
 </section>
 
+<section class="benefit">
+  <div class="container">
+    <h2 class="title-lg">Почему стоит выбрать нас?</h2>
+    <div class="benefit-row">
+      <div class="benefit-item">
+        <img src="img/benefit-item-1.jpg" alt="" class="benefit-item__img">
+        <div class="benefit-item__text">
+          <h3>Мы контролируем качество нашей продукции</h3>
+          <p>Дерево - материал капризный, и при долгом хранении имеется большой риск деформации. Мы можем избежать этого благодаря тому, что не храним большие объемы пиломатериалов на складах. </p>
+        </div>
+      </div>
+      <div class="benefit-item">
+        <img src="img/benefit-item-2.jpg" alt="" class="benefit-item__img">
+        <div class="benefit-item__text">
+          <h3>Мы не зависим от поставщиков</h3>
+          <p>У нас собственное производство и склады, а это значит, что мы сами устанавливаем условия продажи и доставки и лучше контролируем качество и сроки.</p>
+        </div>
+      </div>
+      <div class="benefit-item">
+        <img src="img/benefit-item-3.jpg" alt="" class="benefit-item__img">
+        <div class="benefit-item__text">
+          <h3>Чего-то не хватило? Мы поможем!</h3>
+          <p>Все позиции всегда присутствуют на складе в небольшом количестве. Вы не потеряетен время из-за ошибок в расчетах.</p>
+        </div>
+      </div>
+      <div class="benefit-item">
+        <img src="img/benefit-item-4.jpg" alt="" class="benefit-item__img">
+        <div class="benefit-item__text">
+          <h3>Квалифицированные консультанты</h3>
+          <p>Наши специалисты всегда готовы проконсультировать и помочь определиться с выбором и расчетами.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 {% endblock %}
