--- a/src/index.html
+++ b/src/index.html
@@ -77,4 +77,25 @@
   </div>
 </section>
 
+<section class="special">
+  <div class="container">
+    <h2 class="title-lg">Специальное предложение:</h2>
+    <div class="special-slider">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">{% include 'components/catalog-item.html' %}</div>
+        <div class="swiper-slide">{% include 'components/catalog-item.html' %}</div>
+        <div class="swiper-slide">{% include 'components/catalog-item.html' %}</div>
+        <div class="swiper-slide">{% include 'components/catalog-item.html' %}</div>
+        <div class="swiper-slide">{% include 'components/catalog-item.html' %}</div>
+        <div class="swiper-slide">{% include 'components/catalog-item.html' %}</div>
+      </div>
+      <div class="control special-control">
+        <div class="control-arrow special-prev"></div>
+        <div class="control-count special-count"></div>
+        <div class="control-arrow special-next"></div>
+      </div>
+    </div>
+  </div>
+</section>
+
 {% endblock %}
