--- a/src/index.html
+++ b/src/index.html
@@ -98,4 +98,22 @@
   </div>
 </section>
 
+<section class="spruce">
+  <div class="container">
+    <div class="spruce-row">
+      <div class="spruce-text">
+        <h2 class="title-lg">Пиломатериал из ели имеет и свои неоспоримые преимущества:</h2>
+        <ul class="spruce-list">
+          <li>Лёгкость, низкая плотность означает слабую теплопроводность;</li>
+          <li>Невыпадающие сучки малого диаметра создают интересный рисунок;</li>
+          <li>Необычный цвет древесины оригинально выглядит в интерьере, ель может давать светло-розовый или светло-золотой оттенок;</li>
+          <li>Однородная текстура, придающая пиломатериалу несравнимую ровность и гладкость;</li>
+          <li>Доступность, повсеместная распространённость, низкая цена.</li>
+        </ul>
+      </div>
+      <div class="spruce-img"><img src="img/spruce-img.jpg" alt=""></div>
+    </div>
+  </div>
+</section>
+
 {% endblock %}
