--- a/src/index.html
+++ b/src/index.html
@@ -116,4 +116,32 @@
   </div>
 </section>
 
+<section class="cta">
+  <div class="container">
+    <div class="cta-row">
+      <div class="cta-img"><img src="img/cta-img.jpg" alt=""></div>
+      <div class="cta-content">
+        <h2 class="title-lg">Отправьте нам заявку и&nbsp;получите расчет сегодня!</h2>
+        <h3>Наши специалисты помогут вам определиться с выбором и ответят на все ваши вопросы.</h3>
+        <form action="#" method="post" class="cta-form">
+          <div class="cta-file">
+            <h5>Прикрепите проект или другие документы:</h5>
+            <label>
+              <input type="file" />
+              <img src="img/svg/file-black.svg" alt="">
+              <p>Прикрепить файл</p>
+            </label>
+          </div>
+          <h4>Пожалуйста, укажите, куда отправить расчет.</h4>
+          <input type="text" class="input" placeholder="Имя*" required />
+          <input type="email" class="input" placeholder="E-mail*" required />
+          <input type="tel" class="input masked" placeholder="Телефон:" />
+          <h4>Мы предоставим вам результат в течение 2 часов</h4>
+          <button class="btn btn-green"><p>Отправить</p></button>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
+
 {% endblock %}
