--- a/src/index.html
+++ b/src/index.html
@@ -148,4 +148,16 @@
   <div class="container">Некий Сеошный текст должен быть тут, тихо и незаметно он будет тут существовать и помогать сайту продвигаться к новым вершинам... Некий Сеошный текст должен быть тут, тихо и незаметно он будет тут существовать и помогать сайту продвигаться к новым вершинам...Некий Сеошный текст должен быть тут, тихо и незаметно он будет тут существовать и помогать сайту продвигаться к новым вершинам...Некий Сеошный текст должен быть тут, тихо и незаметно он будет тут существовать и помогать сайту продвигаться к новым вершинам...</div>
 </section>
 
+<section class="help">
+  <div class="container">
+    <div class="help-block">
+      <div class="help-text">
+        <h2>Нужна помощь в заказе?</h2>
+        <h3>Мы свяжемся с вами и подберем оптимальное решение!</h3>
+      </div>
+      <a href="#" class="btn btn-green"><p>Помочь подобрать</p></a>
+    </div>
+  </div>
+</section>
+
 {% endblock %}
