--- a/src/catalog-section.html
+++ b/src/catalog-section.html
@@ -101,6 +101,7 @@
       {% include 'components/catalog-item.html' %}
       {% include 'components/catalog-item.html' %}
     </div>
+    <div class="catalog-section__footer"><div class="catalog-section__more">Загрузить ещё</div></div>
   </div>
 </section>
 
