--- a/src/catalog-section.html
+++ b/src/catalog-section.html
@@ -84,7 +84,8 @@
           <option>Алфавиту А-Я</option>
           <option>Алфавиту Я-А</option>
         </select>
-        </div>
+      </div>
+      <div class="catalog-section__filter-btn"><p>Фильтр</p></div>
     </div>
     <div class="catalog-section__result">
       {% include 'components/catalog-item.html' %}
