--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
         <input type="tel" class="hero-consult__input masked" placeholder="+7 (___) ___-__-__" />
         <button class="btn btn-green btn-consult"><p>Получить расчет</p></button>
       </form>
+      <div class="hero-mob">
+        <div class="btn-wrap"><a href="#" class="btn btn-green btn-consult"><p>Получить расчет</p></a></div>
+      </div>
     </div>
   </div>
 </section>
