--- a/src/price.html
+++ b/src/price.html
@@ -25,9 +25,9 @@
         <div class="price-table__content">
           <div class="price-table__row">
             <div class="price-table__col">Наименование</div>
-            <div class="price-table__col">Цена за шт.</div>
-            <div class="price-table__col">Цена за м.кв.</div>
-            <div class="price-table__col">Цена за м.куб</div>
+            <div class="price-table__col"><span>Цена за</span> шт.</div>
+            <div class="price-table__col"><span>Цена за</span> м.кв.</div>
+            <div class="price-table__col"><span>Цена за</span> м.куб</div>
           </div>
           <div class="price-table__row">
             <div class="price-table__col">Имитация (имитатор) бруса - Карельский профил</div>
@@ -58,9 +58,9 @@
         <div class="price-table__content">
           <div class="price-table__row">
             <div class="price-table__col">Наименование</div>
-            <div class="price-table__col">Цена за шт.</div>
-            <div class="price-table__col">Цена за м.кв.</div>
-            <div class="price-table__col">Цена за м.куб</div>
+            <div class="price-table__col"><span>Цена за</span> шт.</div>
+            <div class="price-table__col"><span>Цена за</span> м.кв.</div>
+            <div class="price-table__col"><span>Цена за</span> м.куб</div>
           </div>
           <div class="price-table__row">
             <div class="price-table__col">Имитация (имитатор) бруса - Карельский профил</div>
@@ -96,9 +96,9 @@
         <div class="price-table__content">
           <div class="price-table__row">
             <div class="price-table__col">Наименование</div>
-            <div class="price-table__col">Цена за шт.</div>
-            <div class="price-table__col">Цена за м.кв.</div>
-            <div class="price-table__col">Цена за м.куб</div>
+            <div class="price-table__col"><span>Цена за</span> шт.</div>
+            <div class="price-table__col"><span>Цена за</span> м.кв.</div>
+            <div class="price-table__col"><span>Цена за</span> м.куб</div>
           </div>
           <div class="price-table__row">
             <div class="price-table__col">Имитация (имитатор) бруса - Карельский профил</div>
@@ -129,9 +129,9 @@
         <div class="price-table__content">
           <div class="price-table__row">
             <div class="price-table__col">Наименование</div>
-            <div class="price-table__col">Цена за шт.</div>
-            <div class="price-table__col">Цена за м.кв.</div>
-            <div class="price-table__col">Цена за м.куб</div>
+            <div class="price-table__col"><span>Цена за</span> шт.</div>
+            <div class="price-table__col"><span>Цена за</span> м.кв.</div>
+            <div class="price-table__col"><span>Цена за</span> м.куб</div>
           </div>
           <div class="price-table__row">
             <div class="price-table__col">Имитация (имитатор) бруса - Карельский профил</div>
