--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <button class="btn btn-green btn-consult"><p>Получить расчет</p></button>
       </form>
       <div class="hero-mob">
-        <div class="btn-wrap"><a href="#" class="btn btn-green btn-consult"><p>Получить расчет</p></a></div>
+        <div class="btn-wrap"><a href="javascript:;" data-fancybox="" data-src="#popup-call" class="btn btn-green btn-consult"><p>Получить расчет</p></a></div>
       </div>
     </div>
   </div>
@@ -158,7 +158,7 @@
         <h2>Нужна помощь в заказе?</h2>
         <h3>Мы свяжемся с вами и подберем оптимальное решение!</h3>
       </div>
-      <a href="#" class="btn btn-green"><p>Помочь подобрать</p></a>
+      <a href="javascript:;" data-fancybox="" data-src="#popup-thanks" class="btn btn-green"><p>Помочь подобрать</p></a>
     </div>
   </div>
 </section>
