--- a/src/index.html
+++ b/src/index.html
@@ -85,6 +85,60 @@
     <h2 class="title-lg">Специальное предложение:</h2>
     <div class="special-slider">
       <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <div class="catalog-item js-calc">
+            <div class="catalog-item__wishlist"></div>
+            <div class="catalog-item__top">
+              <div class="catalog-item__action">Акция</div>
+              <div class="catalog-item__sort">Сорт АВ</div>
+            </div>
+            <div class="catalog-item__info">
+              <div class="catalog-item__size">45<span>х</span>195<span>х</span>6000</div>
+              <a href="#" class="catalog-item__title">Имитация (имитатор) бруса</a>
+              <div class="catalog-item__subtitle">Карельский профиль</div>
+              <div class="catalog-item__desc">Полезная ширина 195</div>
+            </div>
+            <ul class="catalog-item__price">
+              <li><b><span class="catalog-item__price-square"></span>₽</b><p>за м.кв</p></li>
+              <li><b><span class="catalog-item__price-cubic"></span>₽</b><p>за м.куб.</p></li>
+              <li><b><span class="catalog-item__price-pieces"></span>₽</b><p>за шт.</p></li>
+            </ul>
+            <form class="catalog-item__calc js-calc__form"
+              data-thickness="45"
+              data-width="195"
+              data-length="6000"
+              data-scoring-width="195"
+              data-usable-width="195"
+              data-price="129"
+            >
+              <h4>Посчитать, сколько нужно:</h4>
+              <label class="catalog-item__calc-label">
+                <input type="number" data-type="square" placeholder="?" />
+                <p>м.кв.</p>
+              </label>
+              <div class="catalog-item__calc-equals">=</div>
+              <label class="catalog-item__calc-label">
+                <input type="number" data-type="cubic" placeholder="?" />
+                <p>м.куб.</p>
+              </label>
+              <div class="catalog-item__calc-equals">=</div>
+              <label class="catalog-item__calc-label">
+                <input type="number" data-type="running" placeholder="?" />
+                <p>пог.м.</p>
+              </label>
+              <div class="catalog-item__calc-equals">=</div>
+              <label class="catalog-item__calc-label">
+                <input type="number" data-type="pieces" placeholder="?" />
+                <p>шт.</p>
+              </label>
+            </form>
+            <div class="catalog-item__result">Итоговая стоимость <b><span class="js-calc__total">0</span> ₽</b></div>
+            <div class="btn-wrap catalog-item__buttons">
+              <a href="#" class="btn btn-outline"><p>Подробнее</p></a>
+              <a href="#" class="btn btn-green"><p>В смету</p></a>
+            </div>
+          </div>
+        </div>
         <div class="swiper-slide">{% include 'components/catalog-item.html' %}</div>
         <div class="swiper-slide">{% include 'components/catalog-item.html' %}</div>
         <div class="swiper-slide">{% include 'components/catalog-item.html' %}</div>
