--- a/src/item.html
+++ b/src/item.html
@@ -19,9 +19,9 @@
   <div class="container">
     <div class="item-card">
       <div class="item-photo"><img src="img/item-photo.jpg" alt=""></div>
-      <div class="item-info">
+      <div class="item-info js-calc">
         {% include 'components/catalog-item__info.html' %}
-        <div class="item-calc js-calc">
+        <div class="item-calc">
           {% include 'components/catalog-item__calc.html' %}
           <div class="item-calc__total"><p><b>За позицию:</b><span><i class="js-calc__total">0</i> ₽</span></p></div>
         </div>
